DumpRenderTree spams stderr with CFNetwork warnings about null diskcache path https://bugs.webkit.org/show_bug.cgi?id=218241

Reviewed by Darin Adler.

Remove attempt at using a memory only shared URL cache, as subsequent calls
to [WebPreferences setCacheModel:] cause a disk cache to be used anyway. All
this really seems to do is cause CFNetwork to log to stderr. It's unlikely
this optimization is worthwhile anyway these days, as avoiding touching the
filesystem is less necessary.

* DumpRenderTree/mac/DumpRenderTree.mm:
(prepareConsistentTestingEnvironment):


Canonical link: https://commits.webkit.org/230968@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269080 268f45cc-cd09-0410-ab3c-d52691b4dbfc